--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "next": "15.1.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-facebook": "^9.0.12"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "postcss": "^8",
